--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
     "yup": "^1.5.0"
   },
   "devDependencies": {
