--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "reselect": "^5.1.1",
     "yup": "^1.5.0"
   },
   "devDependencies": {
